test_src/compiler_errors/types/boolean/WhileNumberError.b
class WhileNumberError {
    void test() {
        var i = 0;
        while (i) {
            println(i);
            i--;
        }
    }
}
